# career-copilot

./: .gitignore  .release-please-manifest.json  LICENSE  README.md  release-please-config.json  start.sh
.github/workflows/: release-please.yml
backend/: .env.example  CHANGELOG.md  Dockerfile  README.md  main.py  pyproject.toml
backend/app/: __init__.py  main.py  schemas.py
backend/app/agent/: agent.py
backend/app/agent/routers/: mode_router.py  verdict_router.py
backend/app/agent/sub_agents/cv_optimizer/: __init__.py  agent.py  prompt.py
backend/app/agent/sub_agents/cv_parser/: __init__.py  agent.py  prompt.py
backend/app/agent/sub_agents/fit_analyzer/: __init__.py  agent.py  prompt.py
backend/app/agent/sub_agents/gap_explainer/: __init__.py  agent.py  prompt.py
backend/app/agent/sub_agents/interview_prep/: __init__.py  agent.py  prompt.py
backend/app/agent/sub_agents/jd_parser/: __init__.py  agent.py  prompt.py
backend/app/agent/sub_agents/outreach_writer/: __init__.py  agent.py  prompt.py
backend/app/agent/sub_agents/post_writer/: __init__.py  agent.py  prompt.py  schemas.py
backend/app/agent/sub_agents/research_agent/: __init__.py  agent.py  prompt.py
backend/app/agent/sub_agents/trend_scanner/: __init__.py  agent.py  prompt.py  schemas.py
backend/app/agent/tools/: __init__.py  fetch_github_trending.py  fetch_hn_top.py  tavily_mcp.py
backend/app/routes/: analyze.py  drafts.py  extract.py
backend/app/utils/: adk_runner.py  constants.py  llm_utils.py  logging_middleware.py  observability.py  rate_limit.py
backend/tests/: test_routers.py
frontend/: .env.local.example  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: analyze-bar.tsx  analyze-form.tsx  analyze-response.tsx  document-input.tsx  mode-selector.tsx
frontend/components/ui/: badge.tsx  button.tsx  textarea.tsx  toggle-group.tsx
frontend/lib/: api.ts  schemas.ts
(+2 files in other folders)
